tests/ui/imports/import-from-missing-star.stderr
error[E0432]: unresolved import `spam`
  --> $DIR/import-from-missing-star.rs:1:5
   |
LL | use spam::*;
   |     ^^^^ use of unresolved module or unlinked crate `spam`
   |
help: you might be missing a crate named `spam`, add it to your project and import it in your code
   |
LL + extern crate spam;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
